--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           ">Projects</a>
         </li>
         <li class="nav__link">
-          <a href="mailto:hireyousifkhaleel@Gmail.com" class="
+          <a href="mailto:hireyousifkhaleel@gmail.com" class="
             nav__link--anchor
             nav__link--anchor-primary
           ">Contact</a>
@@ -75,7 +75,7 @@
   <section id="languages">
     <div class="container">
       <div class="row">
-        <h1 class="section__title">This is my <span class="text--blue">technology stack</span></h1>
+        <h1 class="section__title">These are my <span class="text--blue">Programming Languages</span></h1>
         <div class="language__list">
           <div class="language">
             <figure class="language__img--wrapper">
